--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "sqlexception/magento2-utils",
   "description": "",
   "require": {
-    "php": "~5.5.0|~5.6.0|~7.0.0",
+    "php":  "~7.1.3||~7.2.0||~7.3.0",
     "magento/magento-composer-installer": "*"
   },
   "suggest": {
